--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@angular/platform-browser": "12.0.1",
     "@angular/platform-browser-dynamic": "12.0.1",
     "@angular/router": "12.0.1",
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.0",
     "rxjs": "7.1.0",
+    "tailwindcss": "^2.1.4",
     "tslib": "2.2.0",
     "zone.js": "0.11.4"
   },
